--- a/src/leaflet-layer-tree-control.css
+++ b/src/leaflet-layer-tree-control.css
@@ -72,7 +72,7 @@
 }
 
 .leaflet-layer-tree-control-toggle-open .leaflet-layer-tree-control-toggle-link {
-	background-image: url('../../../bower_components/leaflet/dist/images/layers.png');
+	background-image: url('../src/leaflet-layer-tree-control-hide_32x32.png');
 	background-repeat: no-repeat;
 	background-position: center center;
 	width: 100%;
@@ -80,7 +80,7 @@
 }
 
 .leaflet-layer-tree-control-toggle-closed .leaflet-layer-tree-control-toggle-link {
-	background-image: url('../../../bower_components/leaflet/dist/images/layers.png');
+	background-image: url('../src/leaflet-layer-tree-control_32x32.png');
 	background-repeat: no-repeat;
 	background-position: center center;
 	width: 100%;
@@ -111,7 +111,7 @@
 }
 
 .leaflet-layer-tree-control-order-toggle-open .leaflet-layer-tree-control-order-toggle-link {
-	background-image: url('../../../bower_components/leaflet/dist/images/layers.png');
+	background-image: url('../src/leaflet-layer-tree-control-select-layers_32x32.png');
 	background-repeat: no-repeat;
 	background-position: center center;
 	width: 100%;
@@ -119,7 +119,7 @@
 }
 
 .leaflet-layer-tree-control-order-toggle-closed .leaflet-layer-tree-control-order-toggle-link {
-	background-image: url('../../../bower_components/leaflet/dist/images/layers.png');
+	background-image: url('../src/leaflet-layer-tree-control-move-layers_32x32.png');
 	background-repeat: no-repeat;
 	background-position: center center;
 	width: 100%;
