- wfs feature color .

--- a/src/leaflet-layer-tree-control.css
+++ b/src/leaflet-layer-tree-control.css
@@ -172,7 +172,7 @@
 }
 
 .leaflet-layer-tree-control-leaf-wfs-zoom-to {
-	background-color: red;
+	background-color: #5560B3;
 	padding: 0px 5px 0px 10px;
 	border-radius: 10px;
 	cursor: pointer;
